Add Supabase development service and update project documentation
## New Features
- Added complete Supabase development environment with PostgreSQL, REST API, and Studio
- Added comprehensive services-dev directory with PostgreSQL, Redis, RabbitMQ, and Supabase
- Added detailed documentation for all services with architecture diagrams and usage instructions

## Services Added
- **Supabase** (ports 13000, 13010, 15433): Full-stack development platform with auto-generated REST API
- **PostgreSQL** (port 15432): Standalone database for general development
- **Redis** (port 16379): In-memory data store with password authentication
- **RabbitMQ** (ports 15672, 15673): Message broker with management UI

## Documentation
- Updated services-dev/README.md with all service configurations and connection details
- Added services-dev/supabase/README.md with detailed architecture and implementation guide
- Added CORE.md with comprehensive development and production guidelines
- Updated .gitignore patterns for docker data persistence

## Configuration
- All services bind to localhost (127.0.0.1) for security
- Persistent data stored in docker_data directories (gitignored)
- Consistent naming pattern: dev-[service-name] for containers
- Port range 15000-19999 allocated for development services

## Access Points
- Supabase Studio: http://localhost:13010 (admin interface)
- Supabase REST API: http://localhost:13000 (auto-generated from schema)
- PostgreSQL: localhost:15433 (postgres/postgres)
- Standard PostgreSQL: localhost:15432 (devuser/devpassword)
- Redis: localhost:16379 (password: devpassword)
- RabbitMQ UI: http://localhost:15672 (devuser/devpassword)

All services are ready for development use with docker compose up -d in respective directories.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ mcp/caddy/caddy/config/
 # Docker persistent data directories
 # All bound volumes should be stored in docker-data folders
 **/docker-data/
+**/docker_data/
