--- a/mcp/caddy/docker-compose.yml
+++ b/mcp/caddy/docker-compose.yml
@@ -1,12 +1,17 @@
 services:
-  # Caddy web server
+  # Caddy web server with Docker provider
   caddy:
-    image: caddy:latest
+    build:
+      context: .
+      dockerfile_inline: |
+        FROM caddy:builder AS builder
+        RUN xcaddy build --with github.com/lucaslorentz/caddy-docker-proxy/v2
+
+        FROM caddy:latest
+        COPY --from=builder /usr/bin/caddy /usr/bin/caddy
     container_name: caddy-server
     restart: unless-stopped
     network_mode: bridge
-    external_links:
-      - lena-massage-website:lena-massage-website
     ports:
       - "80:80"
       - "443:443"
@@ -14,11 +19,13 @@ services:
       - "127.0.0.1:9080:8080"  # Test sites - localhost only for security
       - "127.0.0.1:9081:8081"  # Test sites - localhost only for security
     volumes:
-      - ./caddy/Caddyfile:/etc/caddy/Caddyfile:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro  # Docker socket for auto-discovery
       - ./docker-data/caddy-data:/data
       - ./docker-data/caddy-config:/config
     environment:
       - CADDY_ADMIN=0.0.0.0:2019
+      - CADDY_DOCKER_POLLING_INTERVAL=5s
+    command: caddy docker-proxy
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:2019/config/"]
       interval: 30s
@@ -26,30 +33,4 @@ services:
       retries: 3
       start_period: 5s
 
-  # Caddy MCP Server (lum8rjack/caddy-mcp)
-  caddy-mcp:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: caddy-mcp-server
-    restart: unless-stopped
-    network_mode: bridge
-    external_links:
-      - caddy-server:caddy
-    ports:
-      - "127.0.0.1:7000:7000"  # MCP server port - localhost only for security
-    environment:
-      - CADDY_URL=http://caddy:2019  # Connect via external_links
-      - MCP_TRANSPORT=httpstream     # Can be: stdio, sse, httpstream
-      - MCP_PORT=7000
-    command: ["./caddy-mcp", "-transport", "httpstream", "-url", "http://caddy:2019", "-port", "7000"]
-    depends_on:
-      caddy:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "pgrep", "caddy-mcp"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
 
